timesgeet error msg alignment fixes

--- a/frontend/onedc/src/app/features/timesheets/timesheet-editor/timesheet-editor.component.scss
+++ b/frontend/onedc/src/app/features/timesheets/timesheet-editor/timesheet-editor.component.scss
@@ -50,10 +50,6 @@
   font-size: 0.75rem !important;
 }
 
-.small {
-  font-size: 0.7rem !important;
-}
-
 // Card text font sizes
 .card-title {
   font-size: 0.9rem !important;
